Fixed layout issues

--- a/tests/dummy/app/components/widgets/widget-1/index.css
+++ b/tests/dummy/app/components/widgets/widget-1/index.css
@@ -8,6 +8,7 @@
   display: grid;
   grid-gap: 0.6rem;
   flex: 1;
+  overflow: hidden;
 }
 
 .item-1 {
